add header content and style

--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
                 </ul>
             </div>
         </nav>
+        <div class="header__content">
+            <div class="container">
+                <h1 class="header__title">Front-end</h1>
+                <p class="header__txt">Developer</p>
+            </div>
+        </div>
     </header>
 </body>
 </html>
