finished my section

--- a/index.html
+++ b/index.html
@@ -28,5 +28,12 @@
             </div>
         </div>
     </header>
+    <main  class="main">
+        <section class="main__section1"></section>
+        <section class="main__section2"></section>
+        <section class="main__section3"></section>
+        <section class="main__section4"></section>
+        <section class="main__section5"></section>
+    </main>
 </body>
 </html>
